--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ git+https://github.com/RomelTorres/alpha_vantage@2122903650d608c612bd9ddabd683f5
 matplotlib==3.9.0
 python-dotenv==1.0.1
 # tweepy==4.14.0
+yfinance==0.2.40
