--- a/options/requirements.txt
+++ b/options/requirements.txt
@@ -4,3 +4,9 @@ matplotlib
 pandas
 numpy
 tqdm
+# for the gradio app: (specific old versions because: https://github.com/gradio-app/gradio/issues/9322)
+gradio==4.38.0
+pandas~=2.2.2
+pydantic==2.9.0
+fastapi==0.112.2
+pydantic-core==2.23.2
